--- a/frontend/src/styles/taskList.css
+++ b/frontend/src/styles/taskList.css
@@ -37,6 +37,8 @@
   height: 100%;
   border-radius: 0.5rem;
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.2);
+  background-color: #f3f2ed;
+  padding: .5rem 0;
 }
 
 .task--item {
@@ -48,11 +50,11 @@
   height: 100%;
   border-bottom: 1px solid #00bfff;
   padding-bottom: .5rem;
+  text-align: center;
 }
 
 strong {
   font-weight: 700;
-  margin-bottom: .5rem;
 }
 
 .task--item:last-child {
@@ -73,7 +75,7 @@ strong {
   background-color: #00bfff;
   color: #F5F5F5;
   cursor: pointer;
-  padding: 0.5rem 1rem;
+  padding: 0.3rem .7rem;
   border: none;
   outline: none;
 }
@@ -99,21 +101,18 @@ strong {
 
 .edit--group {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
   width: 100%;
 }
 
 .edit--label {
   font-weight: 700;
   margin-right: 0.5rem;
-  width: 25%;
-
 }
 
 .edit--input {
-  width: 50%;
   padding: .5rem;
   border-radius: 0.5rem;
   font-family: "Fira Sans";
@@ -127,7 +126,6 @@ strong {
 }
 
 .edit--description {
-  width: 50%;
   padding: .5rem;
   border-radius: 0.5rem;
   font-family: "Fira Sans";
@@ -137,12 +135,13 @@ strong {
 }
 
 .edit--select {
-  width: 50%;
   padding: .5rem 0;
   border: none;
   border-radius: 0.5rem;
   font-family: "Fira Sans";
   color: #333;
+  outline: none;
+  cursor: pointer;
 }
 
 .edit--select:focus {
@@ -162,7 +161,7 @@ strong {
   background-color: #00bfff;
   color: #F5F5F5;
   cursor: pointer;
-  padding: 0.5rem 1rem;
+  padding: 0.3rem .7rem;
   border: none;
   outline: none;
 }
